md5Viewer/grammar/md5ModelParser.cpp

// Generated from ..\md3Viewer\grammar\md5Model.g4 by ANTLR 4.7.2


#include "md5ModelListener.h"

#include "md5ModelParser.h"


using namespace antlrcpp;
using namespace antlr4;

md5ModelParser::md5ModelParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

md5ModelParser::~md5ModelParser() {
  delete _interpreter;
}

std::string md5ModelParser::getGrammarFileName() const {
  return "md5Model.g4";
}

const std::vector<std::string>& md5ModelParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& md5ModelParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ModelContext ------------------------------------------------------------------

md5ModelParser::ModelContext::ModelContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

md5ModelParser::VersionContext* md5ModelParser::ModelContext::version() {
  return getRuleContext<md5ModelParser::VersionContext>(0);
}

md5ModelParser::ClContext* md5ModelParser::ModelContext::cl() {
  return getRuleContext<md5ModelParser::ClContext>(0);
}

md5ModelParser::NumJointsContext* md5ModelParser::ModelContext::numJoints() {
  return getRuleContext<md5ModelParser::NumJointsContext>(0);
}

md5ModelParser::NumMeshesContext* md5ModelParser::ModelContext::numMeshes() {
  return getRuleContext<md5ModelParser::NumMeshesContext>(0);
}

md5ModelParser::JointListContext* md5ModelParser::ModelContext::jointList() {
  return getRuleContext<md5ModelParser::JointListContext>(0);
}

std::vector<md5ModelParser::MeshContext *> md5ModelParser::ModelContext::mesh() {
  return getRuleContexts<md5ModelParser::MeshContext>();
}

md5ModelParser::MeshContext* md5ModelParser::ModelContext::mesh(size_t i) {
  return getRuleContext<md5ModelParser::MeshContext>(i);
}


size_t md5ModelParser::ModelContext::getRuleIndex() const {
  return md5ModelParser::RuleModel;
}

void md5ModelParser::ModelContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterModel(this);
}

void md5ModelParser::ModelContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitModel(this);
}

md5ModelParser::ModelContext* md5ModelParser::model() {
  ModelContext *_localctx = _tracker.createInstance<ModelContext>(_ctx, getState());
  enterRule(_localctx, 0, md5ModelParser::RuleModel);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(40);
    version();
    setState(41);
    cl();
    setState(42);
    numJoints();
    setState(43);
    numMeshes();
    setState(44);
    jointList();
    setState(48);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == md5ModelParser::MESH) {
      setState(45);
      mesh();
      setState(50);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClContext ------------------------------------------------------------------

md5ModelParser::ClContext::ClContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* md5ModelParser::ClContext::COMMANDLINE() {
  return getToken(md5ModelParser::COMMANDLINE, 0);
}

std::vector<tree::TerminalNode *> md5ModelParser::ClContext::DBL_QUOTE() {
  return getTokens(md5ModelParser::DBL_QUOTE);
}

tree::TerminalNode* md5ModelParser::ClContext::DBL_QUOTE(size_t i) {
  return getToken(md5ModelParser::DBL_QUOTE, i);
}

tree::TerminalNode* md5ModelParser::ClContext::MESH() {
  return getToken(md5ModelParser::MESH, 0);
}

tree::TerminalNode* md5ModelParser::ClContext::FILE_PATH() {
  return getToken(md5ModelParser::FILE_PATH, 0);
}

std::vector<md5ModelParser::OptionContext *> md5ModelParser::ClContext::option() {
  return getRuleContexts<md5ModelParser::OptionContext>();
}

md5ModelParser::OptionContext* md5ModelParser::ClContext::option(size_t i) {
  return getRuleContext<md5ModelParser::OptionContext>(i);
}


size_t md5ModelParser::ClContext::getRuleIndex() const {
  return md5ModelParser::RuleCl;
}

void md5ModelParser::ClContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCl(this);
}

void md5ModelParser::ClContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCl(this);
}

md5ModelParser::ClContext* md5ModelParser::cl() {
  ClContext *_localctx = _tracker.createInstance<ClContext>(_ctx, getState());
  enterRule(_localctx, 2, md5ModelParser::RuleCl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(51);
    match(md5ModelParser::COMMANDLINE);
    setState(52);
    match(md5ModelParser::DBL_QUOTE);
    setState(53);
    match(md5ModelParser::MESH);
    setState(54);
    match(md5ModelParser::FILE_PATH);
    setState(58);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == md5ModelParser::T__0) {
      setState(55);
      option();
      setState(60);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(61);
    match(md5ModelParser::DBL_QUOTE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OptionContext ------------------------------------------------------------------

md5ModelParser::OptionContext::OptionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> md5ModelParser::OptionContext::ID() {
  return getTokens(md5ModelParser::ID);
}

tree::TerminalNode* md5ModelParser::OptionContext::ID(size_t i) {
  return getToken(md5ModelParser::ID, i);
}

std::vector<tree::TerminalNode *> md5ModelParser::OptionContext::FILE_PATH() {
  return getTokens(md5ModelParser::FILE_PATH);
}

tree::TerminalNode* md5ModelParser::OptionContext::FILE_PATH(size_t i) {
  return getToken(md5ModelParser::FILE_PATH, i);
}


size_t md5ModelParser::OptionContext::getRuleIndex() const {
  return md5ModelParser::RuleOption;
}

void md5ModelParser::OptionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOption(this);
}

void md5ModelParser::OptionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOption(this);
}

md5ModelParser::OptionContext* md5ModelParser::option() {
  OptionContext *_localctx = _tracker.createInstance<OptionContext>(_ctx, getState());
  enterRule(_localctx, 4, md5ModelParser::RuleOption);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    match(md5ModelParser::T__0);
    setState(64);
    match(md5ModelParser::ID);
    setState(66); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(65);
      _la = _input->LA(1);
      if (!(_la == md5ModelParser::ID

      || _la == md5ModelParser::FILE_PATH)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(68); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == md5ModelParser::ID

    || _la == md5ModelParser::FILE_PATH);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VersionContext ------------------------------------------------------------------

md5ModelParser::VersionContext::VersionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* md5ModelParser::VersionContext::MD5VERSION() {
  return getToken(md5ModelParser::MD5VERSION, 0);
}

tree::TerminalNode* md5ModelParser::VersionContext::INT() {
  return getToken(md5ModelParser::INT, 0);
}


size_t md5ModelParser::VersionContext::getRuleIndex() const {
  return md5ModelParser::RuleVersion;
}

void md5ModelParser::VersionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVersion(this);
}

void md5ModelParser::VersionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVersion(this);
}

md5ModelParser::VersionContext* md5ModelParser::version() {
  VersionContext *_localctx = _tracker.createInstance<VersionContext>(_ctx, getState());
  enterRule(_localctx, 6, md5ModelParser::RuleVersion);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(70);
    match(md5ModelParser::MD5VERSION);
    setState(71);
    match(md5ModelParser::INT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NumJointsContext ------------------------------------------------------------------

md5ModelParser::NumJointsContext::NumJointsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* md5ModelParser::NumJointsContext::NUM_JOINTS() {
  return getToken(md5ModelParser::NUM_JOINTS, 0);
}

tree::TerminalNode* md5ModelParser::NumJointsContext::INT() {
  return getToken(md5ModelParser::INT, 0);
}


size_t md5ModelParser::NumJointsContext::getRuleIndex() const {
  return md5ModelParser::RuleNumJoints;
}

void md5ModelParser::NumJointsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNumJoints(this);
}

void md5ModelParser::NumJointsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNumJoints(this);
}

md5ModelParser::NumJointsContext* md5ModelParser::numJoints() {
  NumJointsContext *_localctx = _tracker.createInstance<NumJointsContext>(_ctx, getState());
  enterRule(_localctx, 8, md5ModelParser::RuleNumJoints);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    match(md5ModelParser::NUM_JOINTS);
    setState(74);
    match(md5ModelParser::INT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NumMeshesContext ------------------------------------------------------------------

md5ModelParser::NumMeshesContext::NumMeshesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* md5ModelParser::NumMeshesContext::NUM_MESHES() {
  return getToken(md5ModelParser::NUM_MESHES, 0);
}

tree::TerminalNode* md5ModelParser::NumMeshesContext::INT() {
  return getToken(md5ModelParser::INT, 0);
}


size_t md5ModelParser::NumMeshesContext::getRuleIndex() const {
  return md5ModelParser::RuleNumMeshes;
}

void md5ModelParser::NumMeshesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNumMeshes(this);
}

void md5ModelParser::NumMeshesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNumMeshes(this);
}

md5ModelParser::NumMeshesContext* md5ModelParser::numMeshes() {
  NumMeshesContext *_localctx = _tracker.createInstance<NumMeshesContext>(_ctx, getState());
  enterRule(_localctx, 10, md5ModelParser::RuleNumMeshes);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    match(md5ModelParser::NUM_MESHES);
    setState(77);
    match(md5ModelParser::INT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NumericContext ------------------------------------------------------------------

md5ModelParser::NumericContext::NumericContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* md5ModelParser::NumericContext::FLOAT() {
  return getToken(md5ModelParser::FLOAT, 0);
}

tree::TerminalNode* md5ModelParser::NumericContext::INT() {
  return getToken(md5ModelParser::INT, 0);
}


size_t md5ModelParser::NumericContext::getRuleIndex() const {
  return md5ModelParser::RuleNumeric;
}

void md5ModelParser::NumericContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNumeric(this);
}

void md5ModelParser::NumericContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNumeric(this);
}

md5ModelParser::NumericContext* md5ModelParser::numeric() {
  NumericContext *_localctx = _tracker.createInstance<NumericContext>(_ctx, getState());
  enterRule(_localctx, 12, md5ModelParser::RuleNumeric);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    _la = _input->LA(1);
    if (!(_la == md5ModelParser::INT

    || _la == md5ModelParser::FLOAT)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- JointListContext ------------------------------------------------------------------

md5ModelParser::JointListContext::JointListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* md5ModelParser::JointListContext::JOINTS() {
  return getToken(md5ModelParser::JOINTS, 0);
}

std::vector<md5ModelParser::JointContext *> md5ModelParser::JointListContext::joint() {
  return getRuleContexts<md5ModelParser::JointContext>();
}

md5ModelParser::JointContext* md5ModelParser::JointListContext::joint(size_t i) {
  return getRuleContext<md5ModelParser::JointContext>(i);
}


size_t md5ModelParser::JointListContext::getRuleIndex() const {
  return md5ModelParser::RuleJointList;
}

void md5ModelParser::JointListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterJointList(this);
}

void md5ModelParser::JointListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitJointList(this);
}

md5ModelParser::JointListContext* md5ModelParser::jointList() {
  JointListContext *_localctx = _tracker.createInstance<JointListContext>(_ctx, getState());
  enterRule(_localctx, 14, md5ModelParser::RuleJointList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    match(md5ModelParser::JOINTS);
    setState(82);
    match(md5ModelParser::T__1);
    setState(86);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == md5ModelParser::DBL_QUOTE) {
      setState(83);
      joint();
      setState(88);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(89);
    match(md5ModelParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- JointContext ------------------------------------------------------------------

md5ModelParser::JointContext::JointContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> md5ModelParser::JointContext::DBL_QUOTE() {
  return getTokens(md5ModelParser::DBL_QUOTE);
}

tree::TerminalNode* md5ModelParser::JointContext::DBL_QUOTE(size_t i) {
  return getToken(md5ModelParser::DBL_QUOTE, i);
}

tree::TerminalNode* md5ModelParser::JointContext::ID() {
  return getToken(md5ModelParser::ID, 0);
}

tree::TerminalNode* md5ModelParser::JointContext::INT() {
  return getToken(md5ModelParser::INT, 0);
}

std::vector<md5ModelParser::NumericContext *> md5ModelParser::JointContext::numeric() {
  return getRuleContexts<md5ModelParser::NumericContext>();
}

md5ModelParser::NumericContext* md5ModelParser::JointContext::numeric(size_t i) {
  return getRuleContext<md5ModelParser::NumericContext>(i);
}


size_t md5ModelParser::JointContext::getRuleIndex() const {
  return md5ModelParser::RuleJoint;
}

void md5ModelParser::JointContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterJoint(this);
}

void md5ModelParser::JointContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitJoint(this);
}

md5ModelParser::JointContext* md5ModelParser::joint() {
  JointContext *_localctx = _tracker.createInstance<JointContext>(_ctx, getState());
  enterRule(_localctx, 16, md5ModelParser::RuleJoint);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(91);
    match(md5ModelParser::DBL_QUOTE);
    setState(92);
    match(md5ModelParser::ID);
    setState(93);
    match(md5ModelParser::DBL_QUOTE);
    setState(94);
    match(md5ModelParser::INT);
    setState(95);
    match(md5ModelParser::T__3);
    setState(96);
    numeric();
    setState(97);
    numeric();
    setState(98);
    numeric();
    setState(99);
    match(md5ModelParser::T__4);
    setState(100);
    match(md5ModelParser::T__3);
    setState(101);
    numeric();
    setState(102);
    numeric();
    setState(103);
    numeric();
    setState(104);
    match(md5ModelParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MeshContext ------------------------------------------------------------------

md5ModelParser::MeshContext::MeshContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* md5ModelParser::MeshContext::MESH() {
  return getToken(md5ModelParser::MESH, 0);
}

md5ModelParser::ShaderPathContext* md5ModelParser::MeshContext::shaderPath() {
  return getRuleContext<md5ModelParser::ShaderPathContext>(0);
}

md5ModelParser::VertListContext* md5ModelParser::MeshContext::vertList() {
  return getRuleContext<md5ModelParser::VertListContext>(0);
}

md5ModelParser::TriListContext* md5ModelParser::MeshContext::triList() {
  return getRuleContext<md5ModelParser::TriListContext>(0);
}

md5ModelParser::WeightsListContext* md5ModelParser::MeshContext::weightsList() {
  return getRuleContext<md5ModelParser::WeightsListContext>(0);
}


size_t md5ModelParser::MeshContext::getRuleIndex() const {
  return md5ModelParser::RuleMesh;
}

void md5ModelParser::MeshContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMesh(this);
}

void md5ModelParser::MeshContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMesh(this);
}

md5ModelParser::MeshContext* md5ModelParser::mesh() {
  MeshContext *_localctx = _tracker.createInstance<MeshContext>(_ctx, getState());
  enterRule(_localctx, 18, md5ModelParser::RuleMesh);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    match(md5ModelParser::MESH);
    setState(107);
    match(md5ModelParser::T__1);
    setState(108);
    shaderPath();
    setState(109);
    vertList();
    setState(110);
    triList();
    setState(111);
    weightsList();
    setState(112);
    match(md5ModelParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ShaderPathContext ------------------------------------------------------------------

md5ModelParser::ShaderPathContext::ShaderPathContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* md5ModelParser::ShaderPathContext::SHADER() {
  return getToken(md5ModelParser::SHADER, 0);
}

std::vector<tree::TerminalNode *> md5ModelParser::ShaderPathContext::DBL_QUOTE() {
  return getTokens(md5ModelParser::DBL_QUOTE);
}

tree::TerminalNode* md5ModelParser::ShaderPathContext::DBL_QUOTE(size_t i) {
  return getToken(md5ModelParser::DBL_QUOTE, i);
}

tree::TerminalNode* md5ModelParser::ShaderPathContext::FILE_PATH() {
  return getToken(md5ModelParser::FILE_PATH, 0);
}


size_t md5ModelParser::ShaderPathContext::getRuleIndex() const {
  return md5ModelParser::RuleShaderPath;
}

void md5ModelParser::ShaderPathContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterShaderPath(this);
}

void md5ModelParser::ShaderPathContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitShaderPath(this);
}

md5ModelParser::ShaderPathContext* md5ModelParser::shaderPath() {
  ShaderPathContext *_localctx = _tracker.createInstance<ShaderPathContext>(_ctx, getState());
  enterRule(_localctx, 20, md5ModelParser::RuleShaderPath);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(114);
    match(md5ModelParser::SHADER);
    setState(115);
    match(md5ModelParser::DBL_QUOTE);
    setState(116);
    match(md5ModelParser::FILE_PATH);
    setState(117);
    match(md5ModelParser::DBL_QUOTE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VertListContext ------------------------------------------------------------------

md5ModelParser::VertListContext::VertListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

md5ModelParser::NumVertsContext* md5ModelParser::VertListContext::numVerts() {
  return getRuleContext<md5ModelParser::NumVertsContext>(0);
}

std::vector<md5ModelParser::VertContext *> md5ModelParser::VertListContext::vert() {
  return getRuleContexts<md5ModelParser::VertContext>();
}

md5ModelParser::VertContext* md5ModelParser::VertListContext::vert(size_t i) {
  return getRuleContext<md5ModelParser::VertContext>(i);
}


size_t md5ModelParser::VertListContext::getRuleIndex() const {
  return md5ModelParser::RuleVertList;
}

void md5ModelParser::VertListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVertList(this);
}

void md5ModelParser::VertListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVertList(this);
}

md5ModelParser::VertListContext* md5ModelParser::vertList() {
  VertListContext *_localctx = _tracker.createInstance<VertListContext>(_ctx, getState());
  enterRule(_localctx, 22, md5ModelParser::RuleVertList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(119);
    numVerts();
    setState(123);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == md5ModelParser::VERT) {
      setState(120);
      vert();
      setState(125);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NumVertsContext ------------------------------------------------------------------

md5ModelParser::NumVertsContext::NumVertsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* md5ModelParser::NumVertsContext::NUM_VERTS() {
  return getToken(md5ModelParser::NUM_VERTS, 0);
}

tree::TerminalNode* md5ModelParser::NumVertsContext::INT() {
  return getToken(md5ModelParser::INT, 0);
}


size_t md5ModelParser::NumVertsContext::getRuleIndex() const {
  return md5ModelParser::RuleNumVerts;
}

void md5ModelParser::NumVertsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNumVerts(this);
}

void md5ModelParser::NumVertsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNumVerts(this);
}

md5ModelParser::NumVertsContext* md5ModelParser::numVerts() {
  NumVertsContext *_localctx = _tracker.createInstance<NumVertsContext>(_ctx, getState());
  enterRule(_localctx, 24, md5ModelParser::RuleNumVerts);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(126);
    match(md5ModelParser::NUM_VERTS);
    setState(127);
    match(md5ModelParser::INT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VertContext ------------------------------------------------------------------

md5ModelParser::VertContext::VertContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* md5ModelParser::VertContext::VERT() {
  return getToken(md5ModelParser::VERT, 0);
}

std::vector<tree::TerminalNode *> md5ModelParser::VertContext::INT() {
  return getTokens(md5ModelParser::INT);
}

tree::TerminalNode* md5ModelParser::VertContext::INT(size_t i) {
  return getToken(md5ModelParser::INT, i);
}

std::vector<md5ModelParser::NumericContext *> md5ModelParser::VertContext::numeric() {
  return getRuleContexts<md5ModelParser::NumericContext>();
}

md5ModelParser::NumericContext* md5ModelParser::VertContext::numeric(size_t i) {
  return getRuleContext<md5ModelParser::NumericContext>(i);
}


size_t md5ModelParser::VertContext::getRuleIndex() const {
  return md5ModelParser::RuleVert;
}

void md5ModelParser::VertContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVert(this);
}

void md5ModelParser::VertContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<md5ModelListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVert(this);
}

md5ModelParser::VertContext* md5ModelParser::vert() {
  VertContext *_localctx = _tracker.createInstance<VertContext>(_ctx, getState());
  enterRule(_localctx, 26, md5ModelParser::RuleVert);
